musl/issues/ShortRead.out
* installing to library '/home/runner/R-patched/lib'
* installing *source* package 'ShortRead' ...
** this is package 'ShortRead' version '1.68.0'
** package 'ShortRead' successfully unpacked and MD5 sums checked
** using staged installation
checking for gcc... gcc -std=gnu23
checking whether the C compiler works... yes
checking for C compiler default output file name... a.out
checking for suffix of executables... 
checking whether we are cross compiling... no
checking for suffix of object files... o
checking whether we are using the GNU C compiler... yes
checking whether gcc -std=gnu23 accepts -g... yes
checking for gcc -std=gnu23 option to accept ISO C89... none needed
checking for gzeof in -lz... yes
checking how to run the C preprocessor... gcc -std=gnu23 -E
checking for grep that handles long lines and -e... /bin/grep
checking for egrep... /bin/grep -E
checking for ANSI C header files... yes
checking for sys/types.h... yes
checking for sys/stat.h... yes
checking for stdlib.h... yes
checking for string.h... yes
checking for memory.h... yes
checking for strings.h... yes
checking for inttypes.h... yes
checking for stdint.h... yes
checking for unistd.h... yes
checking size of unsigned long... 8
configure: creating ./config.status
config.status: creating src/Makevars
** libs
using C compiler: 'gcc (Alpine 14.2.0) 14.2.0'
using C++ compiler: 'g++ (Alpine 14.2.0) 14.2.0'
make[1]: Entering directory '/var/local/PKGS/BIOC/ShortRead/src'
gcc -std=gnu23 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/S4Vectors/include' -I'/home/runner/R-patched/lib/IRanges/include' -I'/home/runner/R-patched/lib/XVector/include' -I'/home/runner/R-patched/lib/Biostrings/include' -I'/home/runner/R-patched/lib/Rhtslib/include' -I/usr/local/include   -fopenmp -fpic  -O2 -mtune=native  -c Biostrings_stubs.c -o Biostrings_stubs.o
gcc -std=gnu23 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/S4Vectors/include' -I'/home/runner/R-patched/lib/IRanges/include' -I'/home/runner/R-patched/lib/XVector/include' -I'/home/runner/R-patched/lib/Biostrings/include' -I'/home/runner/R-patched/lib/Rhtslib/include' -I/usr/local/include   -fopenmp -fpic  -O2 -mtune=native  -c IRanges_stubs.c -o IRanges_stubs.o
gcc -std=gnu23 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/S4Vectors/include' -I'/home/runner/R-patched/lib/IRanges/include' -I'/home/runner/R-patched/lib/XVector/include' -I'/home/runner/R-patched/lib/Biostrings/include' -I'/home/runner/R-patched/lib/Rhtslib/include' -I/usr/local/include   -fopenmp -fpic  -O2 -mtune=native  -c R_init_ShortRead.c -o R_init_ShortRead.o
gcc -std=gnu23 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/S4Vectors/include' -I'/home/runner/R-patched/lib/IRanges/include' -I'/home/runner/R-patched/lib/XVector/include' -I'/home/runner/R-patched/lib/Biostrings/include' -I'/home/runner/R-patched/lib/Rhtslib/include' -I/usr/local/include   -fopenmp -fpic  -O2 -mtune=native  -c S4Vectors_stubs.c -o S4Vectors_stubs.o
gcc -std=gnu23 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/S4Vectors/include' -I'/home/runner/R-patched/lib/IRanges/include' -I'/home/runner/R-patched/lib/XVector/include' -I'/home/runner/R-patched/lib/Biostrings/include' -I'/home/runner/R-patched/lib/Rhtslib/include' -I/usr/local/include   -fopenmp -fpic  -O2 -mtune=native  -c XVector_stubs.c -o XVector_stubs.o
gcc -std=gnu23 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/S4Vectors/include' -I'/home/runner/R-patched/lib/IRanges/include' -I'/home/runner/R-patched/lib/XVector/include' -I'/home/runner/R-patched/lib/Biostrings/include' -I'/home/runner/R-patched/lib/Rhtslib/include' -I/usr/local/include   -fopenmp -fpic  -O2 -mtune=native  -c alphabet.c -o alphabet.o
gcc -std=gnu23 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/S4Vectors/include' -I'/home/runner/R-patched/lib/IRanges/include' -I'/home/runner/R-patched/lib/XVector/include' -I'/home/runner/R-patched/lib/Biostrings/include' -I'/home/runner/R-patched/lib/Rhtslib/include' -I/usr/local/include   -fopenmp -fpic  -O2 -mtune=native  -c count.c -o count.o
gcc -std=gnu23 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/S4Vectors/include' -I'/home/runner/R-patched/lib/IRanges/include' -I'/home/runner/R-patched/lib/XVector/include' -I'/home/runner/R-patched/lib/Biostrings/include' -I'/home/runner/R-patched/lib/Rhtslib/include' -I/usr/local/include   -fopenmp -fpic  -O2 -mtune=native  -c io.c -o io.o
io.c: In function 'write_fastq':
io.c:49:11: error: implicit declaration of function 'IS_S4_OBJECT' [-Wimplicit-function-declaration]
   49 |     if (!(IS_S4_OBJECT(id) && strcmp(get_classname(id), "BStringSet") == 0))
      |           ^~~~~~~~~~~~
io.c: In function 'read_prb_as_character':
io.c:227:38: warning: format '%f' expects argument of type 'double', but argument 2 has type 'const char *' [-Wformat=]
  227 |         error("could not read file '%f'", translateChar(STRING_ELT(fname, 0)));
      |                                     ~^
      |                                      |
      |                                      double
      |                                     %s
In file included from io.c:5:
io.c: In function '_AlignedRead_Solexa_make':
call.h:10:5: error: implicit declaration of function 'SET_TYPEOF'; did you mean 'TYPEOF'? [-Wimplicit-function-declaration]
   10 |     SET_TYPEOF((T), LANGSXP);                                   \
      |     ^~~~~~~~~~
io.c:510:5: note: in expansion of macro 'NEW_CALL'
  510 |     NEW_CALL(s, t, "SFastqQuality", nmspc, 2);
      |     ^~~~~~~~
io.c: In function '_read_solexa_export_file':
io.c:658:49: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'int' [-Wformat=]
  658 |                 error("invalid 'strand' field '%s', %s:%d",
      |                                                ~^
      |                                                 |
      |                                                 char *
      |                                                %d
  659 |                       *elt[13], fname, lineno);
      |                       ~~~~~~~~                   
      |                       |
      |                       int
io.c:676:48: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'int' [-Wformat=]
  676 |             error("invalid 'filtering' field '%s', %s:%d",
      |                                               ~^
      |                                                |
      |                                                char *
      |                                               %d
  677 |                   *elt[21], fname, lineno);
      |                   ~~~~~~~~                      
      |                   |
      |                   int
io.c: In function '_solexa_export_make_id':
io.c:696:17: error: implicit declaration of function 'STRING_PTR'; did you mean 'STRING_ELT'? [-Wimplicit-function-declaration]
  696 |         * run = STRING_PTR(VECTOR_ELT(result, SLX_RUN)),
      |                 ^~~~~~~~~~
      |                 STRING_ELT
io.c:696:17: error: initialization of 'struct SEXPREC * const*' from 'int' makes pointer from integer without a cast [-Wint-conversion]
io.c:698:20: error: initialization of 'struct SEXPREC * const*' from 'int' makes pointer from integer without a cast [-Wint-conversion]
  698 |         *machine = STRING_PTR(VECTOR_ELT(result, SLX_MACHINE));
      |                    ^~~~~~~~~~
io.c:703:24: error: assignment to 'struct SEXPREC * const*' from 'int' makes pointer from integer without a cast [-Wint-conversion]
  703 |         multiplexIndex = STRING_PTR(VECTOR_ELT(result, SLX_MULTIPLEX));
      |                        ^
make[1]: *** [/home/runner/R-patched/build/etc/Makeconf:190: io.o] Error 1
make[1]: Leaving directory '/var/local/PKGS/BIOC/ShortRead/src'
make[1]: Entering directory '/var/local/PKGS/BIOC/ShortRead/src'
make[1]: Leaving directory '/var/local/PKGS/BIOC/ShortRead/src'
ERROR: compilation failed for package 'ShortRead'
* removing '/home/runner/R-patched/lib/ShortRead'
* restoring previous '/home/runner/R-patched/lib/ShortRead'
